# onboarding_bot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/: gsd-file-manifest.json
.github/workflows/: ci.yml
.planning/: CODE-REVIEW.md  PROJECT.md  REQUIREMENTS.md  REVIEW.md  ROADMAP.md  STATE.md  config.json  functional-gaps.md  v1-MILESTONE-AUDIT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: d4445e3c472a_add_admin_logs_table.py  f9520363ecac_real_initial_migration.py
scratch/: test_nvidia_llm.py  test_password.py
screenshots/: README.md
scripts/: add_demo_data.py  create_test_data.py  index_knowledge.py  integration_test.py  test_system_readiness.py  verify_backfill.py
src/ai/: __init__.py  llm_client.py
src/api/: deps.py  main.py
src/bot/: __init__.py  auth.py  feedback.py  presenters.py  telegram_app.py
src/core/: config.py  logging.py
src/models/: __init__.py  admin_log.py  feedback_event.py  ingest_job.py  knowledge_item.py  source.py  telegram_user.py
src/tasks/: celery_app.py  ingest.py  knowledge.py
tests/: conftest.py  test_admin.py
tests/api/: test_ingest_routes.py
tests/phase2/: test_attribution_contract.py  test_contracts_and_policy.py  test_extraction_pipeline.py  test_hybrid_retrieval.py  test_knowledge_indexing.py  test_low_relevance_fallback.py  test_sop_generation.py
tests/phase3/: test_auth_gate.py  test_feedback_capture.py  test_graph_fallback.py  (+2 more)
(+158 files in other folders)
