[project]
name = "vbrain"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "celery[redis]>=5.6.0",
    "redis>=5.0.0",
    "qdrant-client>=1.17.1",
    "fastembed>=0.8.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "spacy>=3.7.0",
    "docling>=2.90.0",
    "beautifulsoup4>=4.14.3",
    "groq>=1.2.0",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
    "fpdf2>=2.7.0",
    "pydub>=0.25.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
